data/derived/comb/progs/unify/prog3548.ml.out
Characters 47-48:
  let rec digitsOfInt n = if n <= 0 then [] else 1;;
                                                 ^
Error: This expression has type int but an expression was expected of type
         'a list
